# franka-teleop-cpp

./: .gitignore  CMakeLists.txt  README.md  caring_touch.py  follower.cpp  follower1.cpp  ideas.txt  leader.cpp  leader1.cpp  motion.cpp  player.cpp  teleop_config.yml  test.cpp  to_implement.txt
messages/: robot-state.capnp
utils/: VelocityObserver.cpp  VelocityObserver.h  low_pass_filters.cpp  low_pass_filters.h
